@@ -326,6 +326,7 @@
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog=info.picocli
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=jersey.server
                                                 --add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.gridnode=com.fasterxml.jackson.databind
+                                                --add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.gridnode=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
